--- a/public/stylesheets/dashboard.sass
+++ b/public/stylesheets/dashboard.sass
@@ -154,7 +154,7 @@ a.page_name
 
   .head
     clear: both
-    background: url('/images/embed/dash_bg.png') no-repeat
+    background: url('/images/embed/dash_bg.jpg') no-repeat
     width: 900px
     height: 130px
     overflow:hidden
@@ -428,7 +428,7 @@ a.page_name
   line-height: 40px
   text-align: center
   position: absolute
-  top: 98px
+  top: 97px
   left: 20px
   border-bottom-right-radius: 10px
   border-bottom-left-radius: 10px
