--- a/public/stylesheets/main.sass
+++ b/public/stylesheets/main.sass
@@ -11,7 +11,7 @@
     width: 900px
     height: 45px
     @include border-radius(8px)
-    background: url('/images/embed/dash_bg.png') no-repeat center
+    background: url('/images/embed/dash_bg.jpg') no-repeat center
     position: absolute
     top: 60px
     right: 0
