--- a/public/stylesheets/base.sass
+++ b/public/stylesheets/base.sass
@@ -134,7 +134,7 @@ a.logo
   display: inline
   border: 0
   @include size($logo-width, 46px)
-  background: url('/images/embed/logo.gif') no-repeat
+  background: url('/images/embed/logo.png') no-repeat
   float: left
 
 .site
