--- a/app/views/posts/_post.html.haml
+++ b/app/views/posts/_post.html.haml
@@ -27,17 +27,17 @@
         - favor_data["title"] = "不喜欢"
         %a{ :href => favor_href, :title => '喜欢', :class => 'fave', :data => favor_data}<
           喜欢
-    - if current_user && controller.action_name == "buzz" && false
+    - if current_user && controller.action_name == "buzz"
       - mute_href, mute_data = mute_toggle_post_path(post), { :widget => "rest", :callback => "toggle", :md => "put" }
       - if post.muted_by?(current_user)
-        - favor_data["class"] = "muted"
-        - favor_data["title"] = "静音"
+        - mute_data["class"] = "muted"
+        - mute_data["title"] = "静音"
         %a{ :href => mute_href, :title => '解除静音', :class => 'unmuted', :data => mute_data }<
           解除静音
       - else
-        - favor_data["class"] = "unmuted"
-        - favor_data["title"] = "解除静音"
-        %a{ :href => mute_href, :title => '静音', :class => 'muted', :data => mute_data}<
+        - mute_data["class"] = "unmuted"
+        - mute_data["title"] = "解除静音"
+        %a{ :href => mute_href, :title => '静音: 不再提示有新回复', :class => 'muted', :data => mute_data}<
           静音
     
   .content_body
