--- a/app/views/comments/index_on_blog.html.haml
+++ b/app/views/comments/index_on_blog.html.haml
@@ -3,7 +3,7 @@
   .c_content
     %input{ :type => "hidden", :name => "count", :value => @post.comments.count }
     - @post.comments.each do |comment|
-      .box
+      .box{:data => {:widget => "fixHover"}}
         %img.c_avatar{:src => comment.author.primary_blog.icon.url_for(:'16')}
         %span.c_body
           %span.c_name><
@@ -13,6 +13,11 @@
           = auto_link h(comment.content)
           %span.c_date<
             = "(#{comment.created_at})"
+        - if current_user and comment.manageable_by? current_user
+          %a.remove_comment{ :href => post_comment_path(@post, comment), :title => '删除回复',
+            :data => { :doconfirm => "(→_→) 确定删除此回复吗?", :widget => "rest", :callback => "del", :md => "delete", :parent => "box" }}<
+            X
+
   - if current_user
     .c_input
       = form_tag( post_comments_path, :method => "post", :autocomplete => "off" ) do |f|
