--- a/public/stylesheets/main.sass
+++ b/public/stylesheets/main.sass
@@ -9,11 +9,10 @@
   color: #fff
   .z_header
     width: 900px
-    height: 45px
+    height: 108px
     @include border-radius(8px)
-    background: url('/images/embed/dash_bg.jpg') no-repeat center
+    background: url('/images/embed/dash_bg2.jpg') no-repeat
     position: absolute
-    top: 60px
     right: 0
     left: 0
     bottom: 0
@@ -21,7 +20,6 @@
   .z_icon
     @include size(60px, 60px)
     @include border-radius(10px)
-    border: 3px solid #7999dd
     position: absolute
     top: 12px
     left: 22px
