comment at comment model for this update

--- a/public/stylesheets/post_edit.sass
+++ b/public/stylesheets/post_edit.sass
@@ -333,9 +333,9 @@
 
 
 .my_pages
-  $selector-width = 186px
-  $selector-padding = 10px
-  $selector-inner = $selector-width - 2 * $selector-padding
+  $selector-width: 186px
+  $selector-padding: 10px
+  $selector-inner: $selector-width - 2 * $selector-padding
 
   select
     font-size: 18px
