--- a/doc/raw_html/k201102.css
+++ b/doc/raw_html/k201102.css
@@ -581,19 +581,21 @@ font-family:"Hiragino Sans GB",hei,"microsoft yahei";
 .registation_logo{
 	width:960px;
 	height:420px;
+	position:relative;
+	top:0;
+	left:0;
 }
 
 .registation_bg{
 	width:600px;
 	height:400px;
-	background:url('images/registation_bg.jpg') no-repeat top left;
-	overflow:hidden;
+	background:url('images/registation_bg.gif') no-repeat top left;
 	position:absolute;
-	opacity: 0.5;
-	-moz-opacity: 0.5;
-	filter:alpha(opacity=50);
-	top:50px;
-	left:350px;
+	opacity: 0.9;
+	-moz-opacity: 0.9;
+	filter:alpha(opacity=90);
+	top:0;
+	left:180px;
 	z-index:-1;
 }
 
@@ -604,7 +606,7 @@ font-family:"Hiragino Sans GB",hei,"microsoft yahei";
     overflow:hidden;
     position:absolute;
     top:150px;
-    left:350px;
+    left:180px;
     z-index:1;
 }
 
