--- a/public/stylesheets/mobile.sass
+++ b/public/stylesheets/mobile.sass
@@ -1,5 +1,7 @@
 @import 'base'
 
+.header
+  height: auto
 .head
   height: 60px
   .head_avatar
@@ -24,3 +26,8 @@
     top: 50px
     left: 60px
     z-index: 1
+.article
+  border: 1px solid
+  .avatar
+    display: block
+  .content
