--- a/app/views/posts/_post_full.mobile.haml
+++ b/app/views/posts/_post_full.mobile.haml
@@ -1,4 +1,4 @@
-.article
+%li.article
   %a.avatar{href: blog_path(post.blog)}<
     %img{src: post.blog.icon.url_for(:'16')}
     %span= post.blog.title
