--- a/app/views/users/show.mobile.haml
+++ b/app/views/users/show.mobile.haml
@@ -3,6 +3,6 @@
 - @site_layout = 'site'
 .dashboard
   .main{ :data => { :widget => "sugar" } }
-    .timeline
+    %ul.timeline
       = render :partial => "posts/post_full", :collection => @posts, :as => :post
     = pagination(@posts)
