--- a/public/stylesheets/mobile.sass
+++ b/public/stylesheets/mobile.sass
@@ -1,33 +1,132 @@
-@import 'base'
+@import 'lib'
 
-.header
-  height: auto
-.head
-  height: 60px
-  .head_avatar
-    @include size(60px, 60px)
-    background-repeat: no-repeat
-    background-position: center
-    @include border-radius(5px)
-    float: left
-    display: inline
- 
-    a
-      @include size(60px, 60px)
-      display: block
-      text-decoration: none
-  .icon_s
-    width: 30px
-    height: 30px
-    border: 3px solid #7999dd
-    @include border-radius(10px)
-    overflow: hidden
+*
+  margin: 0
+  padding: 0
+a
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0)
+body
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0)
+  -webkit-touch-callout: none
+
+body
+  background: rgb(0, 0, 0)
+#container
+  background: rgb(197,204,211) url(/images/mobile/pinstripes.png)
+  h1, h2
+    font: bold 18px "Helvetica Neue", Helvetica
+    text-shadow: rgba(255, 255, 255, 0.2) 0 1px 1px
+    color: rgb(76, 86, 108)
+    margin: 10px 20px 6px
+  h1 + ul, h2 + ul, h3 + ul, h4 + ul, h5 + ul, h6 + ul
+    margin-top: 0
+  ul
+    color: black
+    background: #fff
+    border: 1px solid #B4B4B4
+    font: bold 17px "Helvetica Neue", Helvetica
+    padding: 0
+    margin: 15px 10px 17px 10px
+    -webkit-border-radius: 8px
+    li
+      color: #666
+      border-top: 1px solid #B4B4B4
+      list-style-type: none
+      padding: 10px 10px 10px 10px
+  li
+    &:first-child
+      border-top: 0
+      -webkit-border-top-left-radius: 8px
+      -webkit-border-top-right-radius: 8px
+      a
+        border-top: 0
+        -webkit-border-top-left-radius: 8px
+        -webkit-border-top-right-radius: 8px
+    &:last-child
+      -webkit-border-bottom-left-radius: 8px
+      -webkit-border-bottom-right-radius: 8px
+      a
+        -webkit-border-bottom-left-radius: 8px
+        -webkit-border-bottom-right-radius: 8px
+
+  .button, .back, .cancel, .add
     position: absolute
-    top: 50px
-    left: 60px
-    z-index: 1
+    overflow: hidden
+    top: 8px
+    right: 6px
+    margin: 0
+    border-width: 0 5px
+    padding: 0 3px
+    width: auto
+    height: 30px
+    line-height: 30px
+    font-family: inherit
+    font-size: 12px
+    font-weight: bold
+    color: #fff
+    text-shadow: rgba(0, 0, 0, 0.5) 0px -1px 0
+    text-overflow: ellipsis
+    text-decoration: none
+    white-space: nowrap
+    background: none
+    -webkit-border-image: url(/images/mobile/toolButton.png) 0 5 0 5
+  .button.active, .cancel.active, .add.active
+    -webkit-border-image: url(/images/mobile/toolButton.png) 0 5 0 5
+  .blueButton
+    -webkit-border-image: url(/images/mobile/activeButton.png) 0 5 0 5
+    border-width: 0 5px
+  .back
+    left: 6px
+    right: auto
+    padding: 0
+    max-width: 55px
+    border-width: 0 8px 0 14px
+    -webkit-border-image: url(/images/mobile/backButton.png) 0 8 0 14
+    &.active
+      -webkit-border-image: url(/images/mobile/backButton.png) 0 8 0 14
+  .leftButton, .cancel
+    left: 6px
+    right: auto
+
+  .header
+    -webkit-box-sizing: border-box
+    border-bottom: 1px solid #2d3642
+    padding: 10px
+    height: 45px
+    background: url(/images/mobile/toolbar.png) #6d84a2 repeat-x
+    position: relative
+    h1
+      position: absolute
+      overflow: hidden
+      left: 50%
+      top: 10px
+      line-height: 1em
+      margin: 1px 0 0 -75px
+      height: 40px
+      font-size: 20px
+      width: 150px
+      font-weight: bold
+      text-shadow: rgba(0, 0, 0, 0.4) 0px -1px 0
+      text-align: center
+      text-overflow: ellipsis
+      white-space: nowrap
+      color: #fff
+    .button
+      position: static
+      float: right
+      margin-left: 5px
+  .footer
+    background: #dce1eb
+    font-size: 12px
+    line-height: 16px
+    text-align: center
+    text-shadow: rgba(255, 255, 255, 0.8) 0 1px 0
+    color: rgb(76, 86, 108)
+    padding: 15px
+    border-top: 1px solid rgba(76, 86, 108, 0.3)
+    font-weight: bold
+
 .article
-  border: 1px solid
   .avatar
     display: block
   .content
