--- a/app/views/posts/_post.mobile.haml
+++ b/app/views/posts/_post.mobile.haml
@@ -1,49 +1,33 @@
 %div[post]{:class => type}
   .content_head
-    %span.writer_name<
-      %a{href: blog_path(post.author.primary_blog)}
-        = post.author.name + '：'
-    - if current_user and post.editable_by? current_user
-      %a.remove{ :href => post_path(post), :title => '删除',
-        :data => { :doconfirm => "确定删除该条帖子吗?", :widget => "rest", :callback => "del", :md => "delete", :parent => "tar_post" }}<
-        删除
-    %a.open{ :href => posts_blog_path(post), :target => "_blank",
-      title: '展开' }
-    - if current_user
-      - favor_href, favor_data = favor_toggle_post_path(post), { :widget => "rest", :callback => "toggle", :md => "put" }
-      - faved = post.favored_by?(current_user)
-      - if faved
-        - favor_data["class"] = "fave"
-        - favor_data["title"] = "喜欢"
-        %a{ :href => favor_href, :title => '不喜欢', :class => 'faved', :data => favor_data }<
-          不喜欢
-      - else
-        - favor_data["class"] = "faved"
-        - favor_data["title"] = "不喜欢"
-        %a{ :href => favor_href, :title => '喜欢', :class => 'fave', :data => favor_data}<
-          喜欢
+    .left
+      %span.writer_name<
+        %a{href: blog_path(post.author.primary_blog)}<
+          = post.author.name
+    .right
+      %span.update_time= post.created_at
   .content_body
     = render partial: sub_template, object: post
   .content_footer
     .left<
       - unless post.parent.nil?
-        %span.repost_info
-          转自页面
-          %a{ :href => blog_path(post.parent.blog) }
-            = post.parent.blog.title
-      %span.update_time= post.created_at
-    .right.post_stat
+        转自:
+        %a{ :href => blog_path(post.parent.blog) }<
+          = post.parent.blog.title
+    .right
       - if current_user
         %a.reply{ :href => post_comments_path(post), :title => "评论", :data => { :tgt => "comments" } }<
+          评论
           = post.comments.count == 0 ? " " : post.comments.count
       - if (post.repost_count && post.repost_count > 0) || post.ancestor_id
-        %a.repost_count{href: post_reposts_path(post), :title => "转贴记录", :data => { :tgt => "reposts" } }
+        %a.repost_count{href: post_reposts_path(post), :title => "转贴记录", :data => { :tgt => "reposts" } }<
           .repost_icon
           - if post.repost_count_all && post.repost_count_all > 0
-            .num
+            .num<
+              转贴
               = post.repost_count_all
       - if post.favor_count && post.favor_count > 0
-        %a.favor_count{href: post_favor_list_path(post), :title => "喜欢的人", :data => { :tgt => "favors" } }
-          .favor_icon{class: faved ? 'faved' : 'fave'}
-          .num
+        %a.favor_count{href: post_favor_list_path(post), :title => "喜欢的人", :data => { :tgt => "favors" } }<
+          .num<
+            喜欢
             = post.favor_count
