--- a/public/stylesheets/mobile.sass
+++ b/public/stylesheets/mobile.sass
@@ -38,16 +38,9 @@ body
       border-top: 0
       -webkit-border-top-left-radius: 8px
       -webkit-border-top-right-radius: 8px
-      a
-        border-top: 0
-        -webkit-border-top-left-radius: 8px
-        -webkit-border-top-right-radius: 8px
     &:last-child
       -webkit-border-bottom-left-radius: 8px
       -webkit-border-bottom-right-radius: 8px
-      a
-        -webkit-border-bottom-left-radius: 8px
-        -webkit-border-bottom-right-radius: 8px
 
   .button, .back, .cancel, .add
     position: absolute
@@ -111,7 +104,7 @@ body
       text-overflow: ellipsis
       white-space: nowrap
       color: #fff
-    .button
+    .rightButton
       position: static
       float: right
       margin-left: 5px
@@ -127,6 +120,34 @@ body
     font-weight: bold
 
 .article
+  a
+    color: #666
+    text-overflow: ellipsis
+    white-space: nowrap
+    overflow: hidden
+    -webkit-tap-highlight-color: rgba(0,0,0,0)
+    text-decoration: underline
   .avatar
-    display: block
+    img
+      -webkit-border-radius: 8px
+    display: inline-block
+    position: absolute
   .content
+    margin-left: 50px
+    .content_head,
+    .content_footer
+      height: 22px
+      .left
+        float: left
+        >
+          float: left
+          margin-right: 5px
+      .right
+        float: right
+        a
+          float: right
+          margin-left: 5px
+      .update_time
+        color: #f93
+    .content_body
+      margin-bottom: 12px
