--- a/public/stylesheets/mobile.sass
+++ b/public/stylesheets/mobile.sass
@@ -80,6 +80,26 @@ body
   .leftButton, .cancel
     left: 6px
     right: auto
+  .greenButton
+    display: block
+    border-width: 0 12px
+    padding: 10px
+    text-align: center
+    font-size: 20px
+    font-weight: bold
+    text-decoration: inherit
+    color: inherit
+    width: 99%
+    margin: auto
+    cursor: pointer
+  .greenButton.active
+    -webkit-border-image: url(/images/mobile/activeButton.png) 0 12 0 12
+  .greenButton
+    -webkit-border-image: url(/images/mobile/greenButton.png) 0 12 0 12
+    color: #FFFFFF
+  .error
+    color: red
+    font-weight: bold
 
   .header
     -webkit-box-sizing: border-box
@@ -151,3 +171,56 @@ body
         color: #f93
     .content_body
       margin-bottom: 12px
+
+ul
+  &.form li
+    padding: 7px 10px
+    &.error
+      border: 2px solid red
+      + li.error
+        border-top: 0
+    &:hover
+      background: #fff
+  li
+    input
+      &[type="text"], &[type="password"], &[type="tel"], &[type="number"], &[type="search"], &[type="email"], &[type="url"]
+        color: #777
+        background: white url('data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==')
+        border: 0
+        font: normal 17px "Helvetica Neue", Helvetica
+        padding: 0
+        display: inline-block
+        margin-left: 0px
+        width: 100%
+        -webkit-appearance: textarea
+    textarea, select
+      color: #777
+      background: white url('data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==')
+      border: 0
+      font: normal 17px "Helvetica Neue", Helvetica
+      padding: 0
+      display: inline-block
+      margin-left: 0px
+      width: 100%
+      -webkit-appearance: textarea
+    textarea
+      height: 360px
+      padding: 0
+      text-indent: -2px
+    select
+      text-indent: 0px
+      background: transparent url(/images/mobile/chevron.png) no-repeat 103% 3px
+      -webkit-appearance: textfield
+      margin-left: -6px
+      width: 104%
+    input
+      &[type="checkbox"], &[type="radio"]
+        margin: 0
+        color: rgb(50, 79, 133)
+        padding: 10px 10px
+      &[type="checkbox"]:after, &[type="radio"]:after
+        content: attr(title)
+        font: 17px "Helvetica Neue", Helvetica
+        display: block
+        width: 246px
+        margin: -12px 0 0 17px
