--- a/public/stylesheets/mobile.sass
+++ b/public/stylesheets/mobile.sass
@@ -170,7 +170,7 @@ body
       .update_time
         color: #f93
     .content_body
-      margin-bottom: 12px
+      margin: 12px
 
 ul
   &.form li
