--- a/doc/raw_html/k201102.css
+++ b/doc/raw_html/k201102.css
@@ -61,7 +61,7 @@ label{font-family:Hiragino Sans GB,hei,microsoft yahei;}
 	border:0;
 	width:270px;
 	height:46px;
-	background:url('images/logo.png');
+	background:url('images/logo.gif');
 	float:left;
 }
 
@@ -581,33 +581,6 @@ font-family:"Hiragino Sans GB",hei,"microsoft yahei";
 .registation_logo{
 	width:960px;
 	height:420px;
-	position:relative;
-	top:0;
-	left:0;
-}
-
-.registation_bg{
-	width:900px;
-	height:400px;
-	background:url('images/registation_bg.jpg') no-repeat top left;
-	position:absolute;
-	opacity: 0.9;
-	-moz-opacity: 0.9;
-	filter:alpha(opacity=90);
-	top:20px;
-	left:50px;
-	z-index:-1;
-}
-
-.registation_animation{
-	width:600px;
-	height:270px;
-    background:url('images/registation_animation.gif') no-repeat top left;
-    overflow:hidden;
-    position:absolute;
-    top:150px;
-    left:180px;
-    z-index:1;
 }
 
 .registation_show{
@@ -616,7 +589,7 @@ font-family:"Hiragino Sans GB",hei,"microsoft yahei";
 }
 
 .registation_intro{
-	background: url('images/registation.png') no-repeat;
+	background: url(images/registation.png) no-repeat;
 	width:960px;
 	height:364px;	
 }
@@ -635,9 +608,8 @@ font-family:"Hiragino Sans GB",hei,"microsoft yahei";
 	border-radius:5px;
 }
 .registation_title .txt {
-	padding-top:60px;
 	display:inline-block;
-	font-size:24px;
+	font-size:30px;
 	color:#3366cc;
 }
 
@@ -1087,15 +1059,11 @@ font-family:"Hiragino Sans GB",hei,"microsoft yahei";
 
 .dashboard{margin-top:24px;}
 .dashboard .menu{
-	padding:0 0 5px 0;
+	padding-top:4px;
 	width:186px;
+	padding-left:14px;
 	float:right;
 	overflow:hidden;
-	border:1px solid #dcdcdc;
-	-moz-border-radius:10px;
-	-webkit-border-radius:10px;
-	border-radius:10px;
-	background-color:#f4f4f4;
 }
 .dashboard .menu a{
 	color:#8e9494;
@@ -1257,15 +1225,26 @@ font-family:"Hiragino Sans GB",hei,"microsoft yahei";
 
 .dashboard .head .head_bg{
 	width:900px;
-	height:150px;
-	background:url('images/dash_bg2.gif') no-repeat top left;
+	height:100px;
+	background-color:#548ff4;
+	-moz-border-radius:15px; 
+	-webkit-border-radius:15px; 
+	border-radius:15px;
 	position:absolute;
 	top:0;
 	left:0;
 	
 }
 
-
+.dashboard .head .dialog_arrow{
+	width:30px;
+	height:30px;
+	background:url('images/dialog_arrow.gif');
+	position:absolute;
+	top:99px;
+	left:805px;
+	
+}
 
 
 
@@ -1284,137 +1263,56 @@ font-family:"Hiragino Sans GB",hei,"microsoft yahei";
 	margin-left:60px;
 }
 
-.dashboard .left{
-	width:50px;
-}
-
 .dashboard .post_area div{
 	height:100px;
 	float:left;
 }
 .dashboard .post_area a{
 	display:block;
-	width:70px;
-	height:70px;
+	width:110px;
+	height:80px;
 	overflow:hidden;
-	margin:10px 0 0 20px;
 	float:left;
+	margin-top:10px;
+	-moz-border-radius:10px;
+	border-radius:10px;
+	background-position:0px -6px;
 	text-indent: -100px;
 }
+.dashboard .post_area a:hover{
+	background-color: #2660c2;
+}
 
+.dashboard .post_area a:active{
+	background-color: #009fff;
+}
+
+.dashboard .post_area .left{
+	width:30px;
+}
 
 .dashboard .post_area .text{
-	width:80px;
-	height:80px;
-	background:url('images/dash_text.png') no-repeat;
+	background-image:url('images/dash_text.gif');
 }
-
-.dashboard .post_area  .text:hover{
-	width:80px;
-	height:80px;
- 	background:url('images/dash_text_hover.png') no-repeat;
-}
-
 
 .dashboard .post_area .picture{
-	width:80px;
-	height:80px;
-	background:url('images/dash_picture.png') no-repeat;
+	background-image:url('images/dash_picture.gif');
 }
-.dashboard .post_area .picture:hover{
-	width:80px;
-	height:80px;
-	background:url('images/dash_picture_hover.png') no-repeat;
-}
+
 .dashboard .post_area .link{
-	width:80px;
-	height:80px;
-	background:url('images/dash_link.png') no-repeat;
+	background-image:url('images/dash_link.gif');
 }
-.dashboard .post_area .link:hover{
-	width:80px;
-	height:80px;
-	background:url('images/dash_link_hover.png') no-repeat;
-}
+
 .dashboard .post_area .video{
-	width:80px;
-	height:80px;
-	background:url('images/dash_video.png') no-repeat;
-}
-.dashboard .post_area .video:hover{
-	width:80px;
-	height:80px;
-	background:url('images/dash_video_hover.png') no-repeat;
-}
-.dashboard .post_area .audio{
-	width:80px;
-	height:80px;
-	background:url('images/dash_audio.png') no-repeat;
-}
-.dashboard .post_area .audio:hover{
-	width:80px;
-	height:80px;
-	background:url('images/dash_audio_hover.png') no-repeat;
+	background-image:url('images/dash_video.gif');
 }
 
-.dashboard .head_menu{
-	width:180px;
-	height:55px;
-	overflow:hidden;
-	float:right;
-	padding-top:40px;
-	padding-right:5px;
+.dashboard .post_area .music{
+	background-image:url('images/dash_music.gif');
 }
 
-.dashboard .head_menu a{
-	display:block;
-	width:20px;
-	float:left;
-	text-decoration: none;
-	margin:0px 10px;
-	color:#3366cc;
-	*text-align:center;
-	cursor:pointer;
-}
-
-.dashboard .head_menu span{
-	display:block;
-	height:20px; 
-	text-indent: -1000px;
-}
-.dashboard .head_menu .my_follow{
-	height:20px;
-	background:url('images/icon_follow.png') no-repeat top left;
-}
-.dashboard .head_menu .my_follow:hover{
-	height:20px;
-	background:url('images/icon_follow_hover.png') no-repeat top left;
-}
-
-.dashboard .head_menu .my_collect{
-	height:20px;
-	background:url('images/icon_collect.png') no-repeat top left;
-}
-.dashboard .head_menu .my_collect:hover{
-	height:20px;
-	background:url('images/icon_collect_hover.png') no-repeat top left;
-}
-
-.dashboard .head_menu .my_reply{
-	height:40px;
-	background:url('images/icon_reply.png') no-repeat top left;
-}
-.dashboard .head_menu .my_reply:hover{
-	height:40px;
-	background:url('images/icon_reply_hover.png') no-repeat top left;
-}
-.dashboard .head_menu .my_message{
-	height:40px;
-	background:url('images/icon_message.png') no-repeat top left;
-}
-.dashboard .head_menu .my_message:hover{
-	height:40px;
-	background:url('images/icon_message_hover.png') no-repeat top left;
+.dashboard .post_area .explore{
+	background-image:url('images/dash_explore.gif');
 }
 
 .dashboard .head_txt{
@@ -1525,8 +1423,10 @@ font-family:"Hiragino Sans GB",hei,"microsoft yahei";
 	line-height:50px;
 	}
 
-
-.my_pages .selector {
+.my_pages, .my_followers, .my_collect{
+	margin-bottom:8px;
+}
+.my_pages .selector, .my_followers a, .my_collect a{
 	display:block;
 	width:148px;
 	height:34px;
@@ -1538,19 +1438,73 @@ font-family:"Hiragino Sans GB",hei,"microsoft yahei";
 	padding-right:28px;
 	overflow:hidden;
 	color:#777777;
+	border-bottom:1px solid gainsboro;
 }
 .my_pages div.selector{
 	background:url('images/mypages_close.png');
 }
+
+
+
 .my_pages a.selector{
 	background:url('images/mypages_close_a.gif');
 	color:#777777;
 }
 
- a.selector:hover{
+.my_pages a.selector:hover{
 	background:url('images/mypages_close.png');
 }
 
+
+div.my_pages_default a.selector{
+	background:url('images/mypages_close_b.gif');
+	color:#777777;
+	padding-left:26px
+}
+
+div.my_pages_default a.selector:hover{
+	background:url('images/mypages_close_c.gif');
+}
+
+.my_followers a{
+	background:url('images/my_followers.gif');
+	padding-left:26px;
+	color:#777777!important;
+}
+
+.my_collect a{
+	background:url('images/my_collect.gif');
+	padding-left:26px;
+	color:#777777!important;
+}
+
+.my_search .inputer{
+	background:url('images/dash_search.gif');
+	border:1px solid gainsboro;
+	border-radius:5px;
+	height:30px;
+	line-height:30px;
+	width:180px;
+}
+.my_search input{
+	margin:0;
+	margin-left:2px;
+	padding:0px 9px;
+	height:30px;
+	line-height:30px;
+	width:128px;
+	border:0;
+	display:block;
+	float:left;
+	font-size:14px;
+}
+.my_search a{
+	height:30px;
+	line-height:30px;
+	width:30px;
+	display:block;
+	float:right;
+}
 
 /****Article****/
 .article{
@@ -2721,6 +2675,10 @@ margin-bottom:30px;
 
 /**********************************2011/3/20*****************************************/
 
+.header .dash_navigator small{
+    color:#3366cc;
+}
+
 .header .dash_navigator a{
     color:#3366cc;
 	padding:5px 8px;
@@ -2884,13 +2842,10 @@ margin-bottom:30px;
 /**********************reply_page*********************************/
 
 .site .reply a{
-	color:#3366cc;
+	color:#ffffff;
 }
 .site .reply{
 	height:110px;
-	width:900px;
-	background:url('images/reply_bg.gif') no-repeat top left;
-	overflow:hidden;
 	position:relative;
 	padding:0;
 	color:#ffffff;
@@ -2898,43 +2853,45 @@ margin-bottom:30px;
 
 
 }
+.reply .reply_header{
+	width:900px;
+	height:45px;
+	background-color:#548ff4;
+	border-radius:15px;
+	-moz-border-radius:15px;
+	-webkit-border-radius:15px;
+	position:absolute;
+    top:60px;
+    right:0;
+    left:0;
+	bottom:0;
+}
 
 .reply .reply_icon{
 	width:60px;
 	height:60px;
-	background:url('images/test002.jpg') no-repeat 0 0;
+	background:url('images/avatar.jpg') no-repeat 0 0;
 	border-radius:5px;
 	-moz-border-radius:5px;
 	-webkit-border-radius:5px;
 	position:absolute;
-	top:12px;
-	left:22px;
+	top:20px;
+	left:20px;
 }
 
 .reply .reply_icon_s{
 	width:36px;
 	height:36px;
-    background:url('images/reply_icon_s.gif') no-repeat top left;
-    overflow:hidden;
-    position:absolute;
-    top:50px;
-    left:60px; 
-    z-index:1;   
-
-}
-
-.reply .icon{
-	width:30px;
-	height:30px;
-	border-radius:5px;
-	-moz-border_radius:5px;
-	-webkit-border-radius:5px;
-	background:url('images/test002.jpg') no-repeat 0 0;
+	border:3px solid #548ff4;
+	border-radius:10px;
+	-moz-border_radius:10px;
+	-webkit-border-radius:10px;
+	background:url('images/avatar.jpg') no-repeat 0 0;
 	overflow:hidden;
 	position:absolute;
-	top:53px;
-	left:63px;
-	z-index:10;
+	top:42px;
+	left:53px;
+	z-index:1;
 }
 
 .reply .title{
@@ -2943,7 +2900,7 @@ margin-bottom:30px;
 	left:100px;
 	height:50px;
 	z-index:2;
-	display:block;
+	display:inline-block;
 }
 
 .reply .title a{
@@ -2951,12 +2908,12 @@ margin-bottom:30px;
     position:absolute;
     top:30px;
 	text-decoration:none;
-	display:inline-block;
+	display:block;
 }
 
 .reply .title a span{
 	color:#333333;
-	font-size:24px;
+	font-size:96px;
 	text-decoration:none;
 }
 
@@ -2981,88 +2938,97 @@ margin-bottom:30px;
 
 }
 
+.reply .nav_containers{
+	width:200px;
+	height:50px;
+    position:absolute;
+    bottom:30px;
+    right:0;
+    padding-right:30px;
+	
+}
 
 
 .reply .nav_icon_follow{
-	width:20px;
-	height:20px;
+	width:40px;
+	height:30px;
 	overflow:hidden;
-	position:absolute;
-	right:160px;
-	top:65px;
+	position:relative;
+	right:0px;
+	top:0;
 }
 
 .reply .nav_icon_follow a{
-	width:20px;
-	height:20px;
-	background:url('images/icon_follow.png') no-repeat top left;
+	width:40px;
+	height:30px;
+	background:url('images/navi_icon.gif') no-repeat 0 -40px;
 	display:block;
 
 }
 
 .reply .nav_icon_follow a:hover{
-    background:url('images/icon_follow_hover.png') no-repeat top left;
+    background:url('images/navi_icon.gif') no-repeat 0 0;
 
 
 }
 
 .reply .nav_icon_collect{
-	width:20px;
-	height:20px;
+	width:40px;
+	height:30px;
 	overflow:hidden;
-	position:absolute;
-	right:120px;
-	top:65px;
+	position:relative;
+	right:-50px;
+	top:-30px;
 }
 
 .reply .nav_icon_collect a{
-	width:20px;
-	height:20px;
-	background:url('images/icon_collect.png') no-repeat top left;
+	width:40px;
+	height:30px;
+	background:url('images/navi_icon.gif') no-repeat -40px -40px;
     display:block;
 }
 .reply .nav_icon_collect a:hover{
-	background:url('images/icon_collect_hover.png') no-repeat top left;
+	background:url('images/navi_icon.gif') no-repeat -40px 0px;
 
 }
 
 .reply .nav_icon_reply{
-	width:20px;
-	height:20px;
+	width:40px;
+	height:30px;
     overflow:hidden;
-    position:absolute;
-	right:80px;
-	top:65px;
-}
-.reply .nav_icon_reply a{
-	width:20px;
-	height:20px;
-    background:url('images/icon_reply.png') no-repeat top left;
-    display:block;
+    position:relative;
+	right:-100px;
+	top:-60px;
 
 }
+.reply .nav_icon_reply a{
+	width:40px;
+	height:30px;
+    background:url('images/navi_icon.gif') no-repeat -80px -40px;
+    display:block;
+}
 .reply .nav_icon_reply a:hover{
-    background:url('images/icon_reply_hover.png') no-repeat top left;
+    background:url('images/navi_icon.gif') no-repeat -80px 0;
 
 }
 
 	
 .reply .nav_icon_message{
-	width:20px;
-	height:20px;
+	width:40px;
+	height:30px;
     overflow:hidden;
-    position:absolute;
-	right:40px;
-	top:65px;
+    position:relative;
+	right:-150px;
+	top:-90px;
 }
 .reply .nav_icon_message a{
-	width:20px;
-	height:20px;
-	background:url('images/icon_message.png') no-repeat top left;
+	width:40px;
+	height:30px;
+	background:url('images/navi_icon.gif') no-repeat -120px -40px;
     display:block;
 }
 .reply .nav_icon_message a:hover{
-	background:url('images/icon_message_hover.png') no-repeat top left;
+	background:url('images/navi_icon.gif') no-repeat -120px 0;
 }
 .reply .name{
 	width:200px;
@@ -3075,20 +3041,18 @@ margin-bottom:30px;
 
 .reply .message_unmber{
 	width:50px;
-	color:#ffffff;
 	position:absolute;
-	top:85px;
-	right:15px;
+	bottom:5px;
+	right:20px;
 	
 }
 
 
 .reply .reply_unmber{
 	width:100px;
-	color:#fffff;
 	position:absolute;
-    top:85px;
-	right:5px;
+	bottom:5px;
+	right:20px;
 }
 
 
@@ -3098,6 +3062,7 @@ margin-bottom:30px;
 /***********************************dashboard_my_homepage************************************************/
 
 .dashboard .head{
+	background: url('images/dash_.gif') no-repeat;
 	width:900px;
 	height:150px;
 	overflow:hidden;
@@ -3116,7 +3081,7 @@ margin-bottom:30px;
     top:48px;
     left:55px;
     z-index:1;
-    border:3px solid #3366cc;
+    border:3px solid #548ff4;
     border-bottom:none;
     border-top-right-radius:10px;
     border-top-left-radius:10px;
@@ -3136,7 +3101,7 @@ margin-bottom:30px;
 	line-height:40px;
 	text-align:center;
 	position:absolute;
-	top:99px;
+	top:101px;
 	left:20px;
 	border-bottom-right-radius:10px;
 	border-bottom-left-radius:10px;
@@ -3576,9 +3541,8 @@ margin-bottom:30px;
 
 .spread_main .row_button .button{
 	width:100px;
-	height:80px;
-	position:relative;
-	top:50px;
+	height:144px;
+	margin-top:50px;
 	border:none;
 }
 
