new latest.html and search minibar

--- a/doc/raw_html/k201102.css
+++ b/doc/raw_html/k201102.css
@@ -1809,6 +1809,10 @@ position: relative;
 	font-size:14px;
 }
 
+.search_method .selected{
+	font-weight:bold;
+}
+
 div.search_method a.first{
 	border:0px;
 }
