--- a/app/views/posts/_post.mobile.haml
+++ b/app/views/posts/_post.mobile.haml
@@ -16,18 +16,18 @@
           = post.parent.blog.title
     .right
       - if current_user
-        %a.reply{ :href => post_comments_path(post), :title => "评论", :data => { :tgt => "comments" } }<
+        %a.reply{ :href => posts_blog_path(post), :title => "评论"}<
           评论
           = post.comments.count == 0 ? " " : post.comments.count
       - if (post.repost_count && post.repost_count > 0) || post.ancestor_id
-        %a.repost_count{href: post_reposts_path(post), :title => "转贴记录", :data => { :tgt => "reposts" } }<
+        %a.repost_count{href: post_reposts_path(post), :title => "转贴记录"}<
           .repost_icon
           - if post.repost_count_all && post.repost_count_all > 0
             .num<
               转贴
               = post.repost_count_all
       - if post.favor_count && post.favor_count > 0
-        %a.favor_count{href: post_favor_list_path(post), :title => "喜欢的人", :data => { :tgt => "favors" } }<
+        %a.favor_count{href: post_favor_list_path(post), :title => "喜欢的人"}<
           .num<
             喜欢
             = post.favor_count
