finish mobile post view

--- a/public/stylesheets/mobile.sass
+++ b/public/stylesheets/mobile.sass
@@ -224,3 +224,10 @@ ul
         display: block
         width: 246px
         margin: -12px 0 0 17px
+.comments
+  a
+    color: #36c
+  .c_date
+    color: #009A93
+    font-size: 12px
+    font-weight: normal
