--- a/app/views/posts/show.mobile.haml
+++ b/app/views/posts/show.mobile.haml
@@ -1,5 +1,3 @@
 %ul
-  %li
-    = render_post @post
-  %li
-    = yield 'comments/index'
+  = render :partial => "posts/post_full", :locals => {post: @post}
+= render :file => 'comments/index'
