--- a/public/stylesheets/mobile.sass
+++ b/public/stylesheets/mobile.sass
@@ -164,7 +164,7 @@ body
           margin-right: 5px
       .right
         float: right
-        a
+        a, div
           float: right
           margin-left: 5px
       .update_time
