--- a/app/views/layouts/_header.mobile.haml
+++ b/app/views/layouts/_header.mobile.haml
@@ -5,4 +5,4 @@
     - if params[:controller] == 'users' && params[:action] == 'show'
       %a.button.leftButton.blueButton.text{href: new_post_path("text", @blog)} 发布文字
     - else
-      %a.button.back{href: home_path} 控制面板
+      %a.button.back{href: fucking_root} 控制面板
