--- a/public/stylesheets/mobile.sass
+++ b/public/stylesheets/mobile.sass
@@ -78,7 +78,7 @@ body
     &.active
       -webkit-border-image: url(/images/mobile/backButton.png) 0 8 0 14
   .leftButton, .cancel
-    left: 6px
+    left: 10px
     right: auto
   .greenButton
     display: block
@@ -140,6 +140,8 @@ body
     font-weight: bold
 
 .article
+  &:hover
+    background: lightyellow
   a
     color: #666
     text-overflow: ellipsis
