--- a/lib/default_blog_template.mustache
+++ b/lib/default_blog_template.mustache
@@ -4,6 +4,7 @@
     <meta charset='utf-8'></meta>
     <link rel="shortcut icon" href="/images/favicon.ico">
     <title>{{title}}</title>
+    <link rel="alternate" type="application/atom+xml" title="ATOM" href="/feed" />
     <link href="/stylesheets/post_display.css" media="screen" rel="stylesheet" type="text/css" />
     <link href="/stylesheets/blog_show.css" media="screen" rel="stylesheet" type="text/css" />
     <meta name="description" content="{{meta_desc}}"></meta>
