更换头部模板

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,5 +1,5 @@
 - @sub_title = @nav_user_title = '我的消息'
-- @now_path = "messages"
+- @nav_now = "messages"
 
 - if @unread_count > 0
   - content_for :nav_user_append, do
