--- a/app/views/layouts/_header_common.html.haml
+++ b/app/views/layouts/_header_common.html.haml
@@ -5,34 +5,21 @@
     -#   %a{href: home_path(mobile: 1)} 手机版
     - if current_user
       %a.z_dashboard{href: fucking_root}><
-        我的家
+        我的主页
       %span><
         |    
-    %a.z_news{href: news_posts_path}><
-      新鲜事儿
+    %a.z_buzz{ href: buzz_path, title: "回复"}><
+      回复
+      %span><
+        - if current_user.comments_notices.unreads.count > 0
+          = "("+current_user.comments_notices.unreads.count+")"
     %span><
       |    
-    .menu><
-      %div<
-        %a{href: categories_path}
-          探索发现
-          %span.z_more<
-            &nbsp;
-      %div<
-        %a{href: categories_path}<
-          推荐
-          %span.z_new<
-            new!
-      %div<
-        %a{href: tags_path} 兴趣
-      %div<
-        %a{href: wall_posts_path} 宽墙
-      %div<
-        %a{href: sitemap_path} 宽岛地图
-    %a.tar.z_discovery{href: "#"}><
-      探索发现
-      %span.z_more<
-        &nbsp;
+    %a.z_messages{ href: messages_path, title: "消息"}><
+      消息
+      %span><
+        - if current_user.messages.unreads.count > 0
+          = "("+current_user.messages.unreads.count+")"
     - if current_user
       %span><
         |    
