--- a/app/views/users/buzz.html.haml
+++ b/app/views/users/buzz.html.haml
@@ -1,5 +1,5 @@
 - @sub_title = @nav_user_title = '回复我的'
-- @now_path = "buzz"
+- @nav_now = "buzz"
 - css :buzz
 - if current_user.comments_notices.unreads.count > 0
   - content_for :nav_user_append, do
