--- a/public/stylesheets/base.sass
+++ b/public/stylesheets/base.sass
@@ -288,3 +288,30 @@ a.logo
 .latest h1
   margin: 30px 0px
   color: #009fff
+
+.my_search
+  .inputer
+    background: url('/images/embed/dash_search.gif')
+    border: 1px solid gainsboro
+    border-radius: 5px
+    height: 30px
+    line-height: 30px
+    width: 180px
+  input
+    margin: 0
+    margin-left: 2px
+    padding: 0px 9px
+    height: 30px
+    line-height: 30px
+    width: 128px
+    border: 0
+    display: block
+    float: left
+    font-size: 14px
+  a
+    height: 30px
+    line-height: 30px
+    width: 30px
+    display: block
+    float: right
+    @include hide_text
