--- a/public/stylesheets/base.sass
+++ b/public/stylesheets/base.sass
@@ -290,28 +290,28 @@ a.logo
   color: #009fff
 
 .my_search
-  .inputer
+  .search_bar
     background: url('/images/embed/dash_search.gif')
     border: 1px solid gainsboro
     border-radius: 5px
     height: 30px
     line-height: 30px
-    width: 180px
-  input
-    margin: 0
-    margin-left: 2px
-    padding: 0px 9px
-    height: 30px
-    line-height: 30px
-    width: 128px
-    border: 0
-    display: block
-    float: left
-    font-size: 14px
-  a
-    height: 30px
-    line-height: 30px
-    width: 30px
-    display: block
-    float: right
-    @include hide_text
+    width: 184px
+    input
+      margin: 0
+      margin-left: 2px
+      padding: 0px 9px
+      height: 30px
+      line-height: 30px
+      width: 128px
+      border: 0
+      display: block
+      float: left
+      font-size: 14px
+    a
+      height: 30px
+      line-height: 30px
+      width: 30px
+      display: block
+      float: right
+      @include hide_text
