--- a/app/views/layouts/_dashboard_menu.html.haml
+++ b/app/views/layouts/_dashboard_menu.html.haml
@@ -7,6 +7,4 @@
     %a{ href: favors_posts_path, title: "我喜欢的"}<
       %span 我喜欢的
   .my_search
-    .inputer
-      %input{type: "text"}
-      %a{href: "#"} 搜索
+    = render partial: 'shared/search'
