增加针对页面的搜索

--- a/app/views/shared/_search.html.haml
+++ b/app/views/shared/_search.html.haml
@@ -1,3 +1,4 @@
 .search_bar{data: {widget: 'search'}}
-  %input{type: "text"}
+  %input.key{type: "text"}
+  %input.url{type: "hidden", value: (@blog ? blog_path(@blog) : "")}
   %a.all{href: "#"} 搜索
