--- a/public/stylesheets/dashboard.sass
+++ b/public/stylesheets/dashboard.sass
@@ -92,6 +92,9 @@ a.page_name
     .disabled
       color: #cacaca
       cursor: default
+    .search_bar
+      position: absolute
+      margin-top: 20px
 
   .menu_arrow
     @include dashboard_sidebar_button
@@ -396,6 +399,7 @@ a.page_name
     overflow: hidden
     color: #777777
     position: absolute
+    z-index: 1
     top: 0
     left: 0
 
