--- a/public/stylesheets/dashboard.sass
+++ b/public/stylesheets/dashboard.sass
@@ -267,6 +267,7 @@ a.page_name
         background-image: url('/images/embed/dash_audio.gif')
       .explore
         background-image: url('/images/embed/dash_explore.gif')
+        margin-left: 45px
     .head_menu
       width: 180px
       height: 55px
