--- a/app/views/layouts/minimal.html.haml
+++ b/app/views/layouts/minimal.html.haml
@@ -1,8 +1,8 @@
 - content_for :content, do
   .header
-    %a.logo{href: fucking_root, title: "我的主页"}
+    %a.logo{href: fucking_root, title: "我的家"}
     .navigator
-      %a{href: fucking_root}回我的主页
+      %a{href: fucking_root}回我的家
   = yield
   = render :partial => 'shared/footer'
 
