推荐去掉new标识

--- a/app/views/posts/news.html.haml
+++ b/app/views/posts/news.html.haml
@@ -14,10 +14,7 @@
           %span.z_more<
             &nbsp;
       %div<
-        %a{href: categories_path}<
-          推荐
-          %span.z_new<
-            new!
+        %a{href: categories_path} 推荐
       %div<
         %a{href: tags_path} 兴趣
       %div<
