--- a/public/stylesheets/base.sass
+++ b/public/stylesheets/base.sass
@@ -294,9 +294,12 @@ a.logo
     margin: 30px 0px
     color: #009fff
   .z_nav
-    float: right
-    margin: 30px 76px
-
+    float: left
+    margin: 30px 20px
+    a
+    .menu
+      border: 1px solid #777777
+      @include border-radius(3px)
 
 .search_bar
   background: url('/images/embed/dash_search.gif')
