fix css: firebug下箭头掉到下一行

--- a/public/stylesheets/base.sass
+++ b/public/stylesheets/base.sass
@@ -295,10 +295,9 @@ a.logo
     color: #009fff
   .z_nav
     float: left
+    width: 100px
     margin: 30px 20px
-    a
     .menu
-      border: 1px solid #777777
       @include border-radius(3px)
 
 .search_bar
