--- a/public/stylesheets/base.sass
+++ b/public/stylesheets/base.sass
@@ -295,10 +295,11 @@ a.logo
     color: #009fff
   .z_nav
     float: left
-    width: 100px
-    margin: 30px 20px
+    margin: 33px 20px 27px 20px
     .menu
       @include border-radius(3px)
+  a.tar
+    margin-right: 0
 
 .search_bar
   background: url('/images/embed/dash_search.gif')
