--- a/public/stylesheets/user.sass
+++ b/public/stylesheets/user.sass
@@ -126,28 +126,42 @@
     font-family: "Hiragino Sans GB",hei,"microsoft yahei"
 
   .registation_logo
-    background: url(/images/embed/logo.gif) no-repeat
-    width: 270px
-    height: 46px
-   
-  .registation_intro
     width: 960px
-    height: 440px
+    height: 420px
+    position: relative
+    top: 0
+    left: 0
+
+  .registation_bg
+    width: 900px
+    height: 400px
+    background: url('/images/registation_bg.jpg') no-repeat top left
+    position: absolute
+    opacity: 0.9
+    -moz-opacity: 0.9
+    filter: alpha(opacity = 90)
+    -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=90)
+    top: 20px
+    left: 50px
+    z-index: -1
+
+  .registation_animation
+    width: 600px
+    height: 270px
+    background: url('/images/registation_animation.gif') no-repeat top left
+    overflow: hidden
+    position: absolute
+    top: 150px
+    left: 180px
+    z-index: 1
    
   .registation_title
     text-align: center
     margin-top: 20px
     margin-bottom: 5px
-    .avatar
-      @include size(60px, 60px)
-      display: inline-block
-      @include border-radius(5px)
-      background-image: url('/images/default_blog_icon.jpg')
-      background-repeat: no-repeat
-      background-position: center
     .txt
       display: inline-block
-      font-size: 24px
+      font-size: 18px
       padding: 10px
       color: #3366cc
    
