fix login stylesheet

--- a/public/stylesheets/user.sass
+++ b/public/stylesheets/user.sass
@@ -3,7 +3,7 @@
 .start_page 
   h1
     width: 750px
-    padding-top: 50px
+    padding-top: 0px
     font-size: 30px
     line-height: 300%
     margin: auto
@@ -18,19 +18,15 @@
     _font-weight: bold
 
 
-  form.login, 
-  form.register
+  form.login
     width: 480px
-    padding: 80px 140px
+    padding: 70px 140px
     background-color: #f2f6f9
     margin: 0 auto 30px auto
     -moz-border-radius: 20px
     -webkit-border-radius: 20px
     border-radius: 20px
     border: 1px solid #cadbea
-
-    .register
-      padding-top: 30px
 
   .register_title
     padding-top: 0px
