添加手机浏览器判断

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -19,7 +19,7 @@
         %a.link{href: new_post_path("link", @blog)} 发布链接
         %a.video{href: new_post_path("video", @blog)} 发布视频
         %a.audio{href: new_post_path("audio", @blog)} 发布音乐
-        %a.explore{href: news_posts_path} 新鲜事儿
+        %a.explore{href: news_posts_path} 探索
         .right
       - unless flash.blank?
         .dashboard_flash
