--- a/app/views/layouts/_header.mobile.haml
+++ b/app/views/layouts/_header.mobile.haml
@@ -2,8 +2,8 @@
   %h1<
     宽岛
     = "_"+@sub_title if @sub_title
-
   %a.button.rightButton{href: home_path(mobile: 0)} 切换到网页版
+  %a.button.rightButton{href: news_posts_path} 探索
   - if current_user
     - if params[:controller] == 'users' && params[:action] == 'show'
       %a.button.leftButton.blueButton.text{href: new_post_path("text", @blog)} 发布文字
