--- a/public/stylesheets/mobile.sass
+++ b/public/stylesheets/mobile.sass
@@ -117,7 +117,6 @@ body
       margin: 1px 0 0 -75px
       height: 40px
       font-size: 20px
-      width: 240px
       font-weight: bold
       text-shadow: rgba(0, 0, 0, 0.4) 0px -1px 0
       text-align: center
@@ -128,6 +127,7 @@ body
       position: static
       float: right
       margin-left: 5px
+      z-index: 1
   .footer
     background: #dce1eb
     font-size: 12px
