--- a/public/stylesheets/base.sass
+++ b/public/stylesheets/base.sass
@@ -82,6 +82,8 @@ pre
     color: #fff
     @include border-radius(8px)
     background-color: $blue
+    span
+      color: #fff
     .z_more
       background: url('/images/icons.gif') -100px -40px
   .menu
